# advent-of-code-2022

./: .clang-format  CMakeLists.txt  README.md
01_calories/: CMakeLists.txt
01_calories/src/: calories.cc
01_calories/test/: calories_test.cc
my_datastructures/: CMakeLists.txt  maxHeap.cc  maxHeap.h
my_datastructures/test/: heap_test.cc
my_util/: CMakeLists.txt  swap.cc  swap.h
my_util/test/: swap_test.cc
